--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="logo.png" />
+    <link rel="icon" type="image/svg+xml" href="apexlogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LedgerSafeAI</title>
+    <title>ApexTrust</title>
     <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   </head>
   <body>
